cmake_minimum_required(VERSION 3.29)
project(lab_rsoi1 CXX)
set(CMAKE_CXX_STANDARD 20)
find_package(beauty REQUIRED)
find_package(GTest REQUIRED)
find_package(libpqxx REQUIRED)
include_directories(src)
add_executable(lab_rsoi1 src/Main.cpp src/third_party/beauty_server.cpp)
target_link_libraries(lab_rsoi1 PRIVATE beauty::beauty libpqxx::pqxx)
add_executable(lab_rsoi1_tests src/MainTests.cpp)
target_link_libraries(lab_rsoi1_tests PRIVATE gtest::gtest beauty::beauty)
